2011-03-16  David Levin  <levin@chromium.org>

        o Cleaned up test_expectation to remove items due to new baselines
          and remove some crashes that have been fixed.
        o text-combine: Added baseline following r81251.
        o Everything else: Add some not so timely baselines for r77485.


        * platform/chromium-linux/fast/dynamic/text-combine-expected.checksum: Added.
        * platform/chromium-linux/fast/dynamic/text-combine-expected.png: Added.
        * platform/chromium-linux/fast/dynamic/text-combine-expected.txt: Added.
        * platform/chromium-mac/fast/box-shadow/box-shadow-transformed-expected.checksum: Added.
        * platform/chromium-mac/fast/box-shadow/box-shadow-transformed-expected.png: Added.
        * platform/chromium-mac/fast/dynamic/text-combine-expected.checksum: Added.
        * platform/chromium-mac/fast/dynamic/text-combine-expected.png: Added.
        * platform/chromium-mac/svg/W3C-SVG-1.1/filters-blend-01-b-expected.checksum: Added.
        * platform/chromium-mac/svg/W3C-SVG-1.1/filters-blend-01-b-expected.png: Added.
        * platform/chromium-mac/svg/W3C-SVG-1.1/masking-path-04-b-expected.checksum: Added.
        * platform/chromium-mac/svg/W3C-SVG-1.1/masking-path-04-b-expected.png: Added.
        * platform/chromium-mac/svg/carto.net/scrollbar-expected.checksum: Added.
        * platform/chromium-mac/svg/carto.net/scrollbar-expected.png: Added.
        * platform/chromium-mac/svg/carto.net/selectionlist-expected.checksum: Added.
        * platform/chromium-mac/svg/carto.net/selectionlist-expected.png: Added.
        * platform/chromium-mac/svg/custom/image-small-width-height-expected.checksum: Added.
        * platform/chromium-mac/svg/custom/image-small-width-height-expected.png: Added.
        * platform/chromium-mac/svg/text/selection-doubleclick-expected.checksum: Added.
        * platform/chromium-mac/svg/text/selection-doubleclick-expected.png: Added.