@@ -1,3 +1,12 @@
+2011-03-16  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Reviewed by Eric Carlson.
+
+        Improve robustness of controls-without-preload by seeking to the start explicitly at the end of the test.
+        https://bugs.webkit.org/show_bug.cgi?id=56489
+
+        * media/controls-without-preload.html: Added an extra step to seek to 0 before the end of the test.
+
 2011-03-16  David Levin  <levin@chromium.org>
 
         o Cleaned up test_expectation to remove items due to new baselines
